# Syntarch

./: .gitignore  README.md  example.md  pyproject.toml  setup.py  test.py
docs/ja/: README.md
src/syntarch/: parser.py
src/syntarch/builder/: builder.py  prebuild.py
src/syntarch/builder/utils/: marker.py  matcher.py  token.py  types.py
sucellus/: __init__.py  codeblock.py  flags.py  headlines.py  image.py  marker.py  matchers.py  parser.py  quoteblock.py  table.py  texts.py  token.py  types.py
sucellus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sucellus/tokens/: codeblock.py  footnote.py  headlines.py  list.py  mathblock.py  quoteblock.py  table.py  texts.py  token.py
syntarch/: __init__.py  marker.py  parser.py  token.py  types.py
tests/: codeblock.md  example.ja.md  head.md  list.md  paragraph.md  quote.md  quoteblock.md  table.md  test_table.py
tests/codeblock/: test.md
tests/head/: expect.json  test.md
