[build-system]
requires = ["setuptools"]

[project]
name = "syntarch"
version = "2.0.0"
description = "Markdown Parser: parse markdown to ML-CASTL"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "src.syntarch.version"}
